shimlang/test_scripts/errors/compare_lte_type_error.stderr
 1 | "a" <= 2;
         ^^
Error: Can't LTE String(1, 0, u24([0, 0, 5])) and Integer(2)
